# board

./: README.md  active.sh  ip_config.txt  stop.sh
include/: header.h
interClient/: CMakeLists.txt  main.cpp
interClient/LiDAR/: CMakeLists.txt  lidarParser.cpp  lidarParser.h  vl_as16.cpp  vl_as16.h
interClient/UDP/: CMakeLists.txt  carnavicom_udp.cpp  carnavicom_udp.h
interClient/processor/: CMakeLists.txt  carnavicomProcessor.cpp  carnavicomProcessor.h
interClient_camera/: CMakeLists.txt  main.cpp
interClient_camera/v4l2/: CMakeLists.txt  usbvideo.cpp  usbvideo.h
interCommu/: CMakeLists.txt  interCommunication.cpp  interCommunication.h
interServer/: CMakeLists.txt  main.cpp
